# macbox

./: BUILD.bazel  MODULE.bazel  WORKSPACE  go.mod  go.sum
cli/: BUILD.bazel  Cargo.toml  main.go
common/rpc/: BUILD.bazel  unix_socket_rpc.go
libsystem/: BUILD.bazel  allocator.zig  api.zig  api_client.cc  api_client.hh  cwd.zig  errno.h  errno.zig  getcwd.cc  getcwd.hh  libs.hh  libs.zig  main.zig  protobuf.zig  syscall.cc  syscall.hh  test.zig
libsystem/protobuf/: arena.zig  bindings.zig  strings.zig  types.zig
libsystem2/: BUILD.bazel  api.h  api.zig  cwd.zig  errno.h  errno.zig  libs.zig  protobuf.zig
proto/macbox/core/v1/: BUILD.bazel  macbox.proto
proto/macbox/manage/v1/: BUILD.bazel  manage.proto
proto/protocol/v1/: BUILD.bazel  rpc.proto
sandbox/: BUILD.bazel  go.mod  main.go
sandbox/manage/: BUILD.bazel  manager.go  server.go  socket_server.go
sandbox/sandbox/: BUILD.bazel  server.go
tools/: BUILD.bazel  gopackagesdriver.sh  update_compile_commands.sh
