RULES_PROTO_VERSION = "5.0.0-alpha2"

bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_go", version = "0.44.2")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "protobuf", version = "23.1")
bazel_dep(name = "rules_proto_grpc", version = RULES_PROTO_VERSION)
bazel_dep(name = "rules_proto_grpc_cpp", version = RULES_PROTO_VERSION)
bazel_dep(name = "rules_proto_grpc_go", version = RULES_PROTO_VERSION)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "go.mod")