load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/TheGrizzlyDev/macbox/cli

go_library(
    name = "cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/TheGrizzlyDev/macbox/cli",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cli",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)
