cc_library(
    name = "libsystem_lib",
    srcs = glob(["*.cc"]),
    hdrs = glob(["*.hh"]),
    linkopts = [
        "-ldl",  # Provides dlsym
    ],
    deps = [
        "//proto/macbox/core/v1:macbox_core_v1_cpp_proto",
        "//proto/protocol/v1:protocol_v1_cpp_proto",
    ]
)

cc_shared_library(
    name = "libsystem",
    deps = [":libsystem_lib"],
)
