load("@rules_zig//zig:defs.bzl", "zig_shared_library", "zig_test")

cc_library(
    name = "libsystem_support",
    srcs = glob(["*.c"]),
    hdrs = glob(["*.h"]),
)

zig_shared_library(
    name = "libsystem",
    main = "main.zig",
    srcs = glob(["*.zig"]),
    copts = [
        "-ldl",  # Provides dlsym
    ],
    cdeps = [
        "@rules_zig//zig/lib:libc",
        "//proto/macbox/core/v1:macbox_core_v1_c_proto",
        ":libsystem_support",
    ]
)

zig_test(
    name = "test",
    main = "test.zig",
    srcs = glob(["*.zig"]),
    copts = [
        "-ldl",  # Provides dlsym
    ],
    cdeps = [
        "@rules_zig//zig/lib:libc",
        "//proto/macbox/core/v1:macbox_core_v1_c_proto",
        ":libsystem_support",
    ]
)