load("@rules_zig//zig:defs.bzl", "zig_shared_library", "zig_test", "zig_module")

cc_library(
    name = "csrcs",
    srcs = glob(["*.c"]),
    hdrs = glob(["*.h"]),
)

zig_module(
    name = "module",
    srcs = glob(["**/*.zig"]),
    main = "main.zig",
)

zig_shared_library(
    name = "libsystem",
    deps = [":module"],
    main = "main.zig",
    copts = [
        "-ldl",  # Provides dlsym
    ],
    cdeps = [
        "@rules_zig//zig/lib:libc",
        "//proto/macbox/core/v1:macbox_core_v1_c_proto",
        "//proto/protocol/v1:protocol_v1_c_proto",
        ":csrcs",
    ],
)

zig_test(
    name = "test",
    main = "main.zig",
    deps = [":module"],
    copts = [
        "-ldl",  # Provides dlsym
    ],
    cdeps = [
        "@rules_zig//zig/lib:libc",
        "//proto/macbox/core/v1:macbox_core_v1_c_proto",
        "//proto/protocol/v1:protocol_v1_c_proto",
        ":csrcs",
    ],
)