load("@rules_zig//zig:defs.bzl", "zig_shared_library")

zig_shared_library(
    name = "libsystem2",
    main = "main.zig",
    srcs = glob(["*.zig"]),
    csrcs = glob(["*.h"]),
    copts = [
        "-ldl",  # Provides dlsym
    ],
    cdeps = [
        "@rules_zig//zig/lib:libc",
        "//proto/macbox/core/v1:macbox_core_v1_c_proto",
    ]
)