load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/TheGrizzlyDev/macbox/sandbox

go_library(
    name = "sandbox_lib",
    srcs = ["main.go"],
    importpath = "github.com/TheGrizzlyDev/macbox/sandbox",
    visibility = ["//visibility:private"],
    deps = [
        "//common/rpc",
        "//proto/macbox/manage/v1:macbox_manage_v1_go_proto",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "sandbox",
    embed = [":sandbox_lib"],
    visibility = ["//visibility:public"],
)
