load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sandbox",
    srcs = ["server.go"],
    importpath = "github.com/TheGrizzlyDev/macbox/sandbox/sandbox",
    visibility = ["//visibility:public"],
    deps = [
        "//common/rpc",
        "//proto/macbox/core/v1:macbox_core_v1_go_proto",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
