load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_proto_library")

proto_library(
    name = "protocol_v1_proto",
    srcs = ["rpc.proto"],
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:any_proto"],
)

go_proto_library(
    name = "protocol_v1_go_proto",
    importpath = "github.com/TheGrizzlyDev/macbox/proto/protocol/v1",
    proto = ":protocol_v1_proto",
    visibility = ["//visibility:public"],
)

cpp_proto_library(
    name = "protocol_v1_cpp_proto",
    protos = [":protocol_v1_proto"],
    visibility = ["//visibility:public"],
)
