load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_c//:defs.bzl", "c_proto_library")

proto_library(
    name = "protocol_v1_proto",
    srcs = ["rpc.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "protocol_v1_go_proto",
    importpath = "github.com/TheGrizzlyDev/macbox/proto/protocol/v1",
    proto = ":protocol_v1_proto",
    visibility = ["//visibility:public"],
)

c_proto_library(
    name = "protocol_v1_c_proto",
    protos = [":protocol_v1_proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@upb//:message_accessors",
    ],
)
