load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_c//:defs.bzl", "c_proto_library")

proto_library(
    name = "macbox_core_v1_proto",
    srcs = ["macbox.proto"],
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:any_proto"],
)

go_proto_library(
    name = "macbox_core_v1_go_proto",
    importpath = "github.com/TheGrizzlyDev/macbox/proto/macbox/core/v1",
    proto = ":macbox_core_v1_proto",
    visibility = ["//visibility:public"],
)

c_proto_library(
    name = "macbox_core_v1_c_proto",
    protos = [
        ":macbox_core_v1_proto",
        "@protobuf//:any_proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@upb//:message_accessors",
    ],
)
